# specufex

./: .coverage  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .setup.py  Dockerfile  Dockerfile.tutorial  Dockerfile.tutorial_local  LICENSE  README.md  Untitled.ipynb  nox.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  scaling_results.csv  setup.py  specufex_scaling.py
.github/workflows/: python-app.yml
docs/: .buildinfo  Makefile  api.html  examples.html  genindex.html  getting_started.html  index.html  installation.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js  specufex.html  tutorials.html  usage.html
docs/.doctrees/: api.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  installation.doctree  specufex.doctree  tutorials.doctree  usage.doctree
docs/_sources/: api.rst  api.rst.txt  conf.py  example_geysers.ipynb  getting_started.rst.txt  index.rst  specufex.rst  specufex.rst.txt  tutorials.rst.txt  usage.rst
docs/_src/: conf.py  examples.rst  index.rst
docs/doctrees/: api.doctree  environment.pickle  example_geysers.doctree  examples.doctree  index.doctree  installation.doctree  specufex.doctree  usage.doctree
docs/html/: .buildinfo  api.html  example_geysers.html  example_geysers.ipynb  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  specufex.html  usage.html
docs/html/_sources/: examples.rst.txt  index.rst.txt  (+3 more)
doctrees/: api.doctree  environment.pickle  example_geysers.doctree  examples.doctree  index.doctree  installation.doctree  specufex.doctree  usage.doctree
html/: .buildinfo  api.html  example_geysers.html  examples.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  specufex.html  usage.html
html/_sources/: examples.rst.txt  usage.rst.txt
specufex/: __init__.py  hmm.py  modelutils.py  nmf.py  utilities.py
specufex/tests/: testclasses.py  tests.py
tests/: .coverage  README.md  test_hmm_params.h5  test_nmf_params.h5  test_specufex.py  tests.py
tutorials/: ReadMe.md  amatrice_makeH5.ipynb  amatrice_tutorial-Copy1.ipynb  amatrice_tutorial.ipynb  f2_cluster_functions.py  geysers_tutorial.ipynb  waveforms.h5?rlkey=s4a4gcx4tsdmfi46r6tqi49fy&dl=1
tutorials/data/: hypoDD_20161013_20161018.csv
(+12 files in other folders)
