[build-system]
requires = [
    "flit_core",
]
build-backend = "flit_core.buildapi"

[project]
name = "specufex"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.2.1",
    "h5py>=2.10.0",
    "numexpr"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.paths]
source = ["specufex"]

[tool.coverage.run]
branch = true
source = ["specufex"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.flake8]
avoid_escape = false
docstring_convention = "all"
docstring_style = "google"
exclude = [
    ".git",
    "__pycache__",
    ".nox",
    "build",
    "docs",
]

ignore = [
    "E203",
    "E501",
    "W503",
]
max_line_length = 88
suppress_none_returning = true

[tool.isort]
profile = "black"
