[build-system]
requires = [
    "flit_core",
]
build-backend = "flit_core.buildapi"

[project]
name = "specufex"
version="0.1.1"
authors = [
    {name = "Nate Groebner", email = "ngroe0029@gmail.com"},
    {name = "Theresa Sawi", email = "tsawi@ldeo.columbia.edu"},
]
description="Python implementation of SpecUFEx"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "h5py",
    "numpy>=1.20.0",
    "scipy>=1.2.1",
    "h5py>=2.10.0",
    "numexpr",
    "h5py",
    "tqdm",
    "scikit-learn",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "coverage[toml]",
    "flake8",
    "pytest-cov",
    "flake8-black",
    "flake8-isort",
    "flake8-pyprojecttoml",
    #"ruff"
]

[project.urls]
Documentation = "https://specufex.github.io/specufex/html/index.html"
Repository = "https://github.com/Specufex/specufex.git"
Issues = "https://github.com/Specufex/specufex/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.coverage.paths]
source = ["specufex"]

[tool.coverage.run]
branch = true
source = ["specufex"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.flake8]
avoid_escape = false
docstring_convention = "all"
docstring_style = "google"
exclude = [
    ".git",
    "__pycache__",
    ".nox",
    "build",
    "docs",
]
ignore = [
    "E203",
    "E501",
    "W503",
]
max_line_length = 88
suppress_none_returning = true

[tool.isort]
profile = "black"
